

			     BZFlag release notes

BZFlag 1.11
-----------

* Added BZDB variables to allow for more realistic friction - Nils McCarthy
* Added ForwardOnly and ReverseOnly bad flags - Sean Morrison
* bans based on hostmask (/hostban, ...) when adns is available - Nils McCarthy
* No Jumping and Trigger Happy flags - Nils McCarthy
* server option to disallow autopilot - Nils McCarthy
* SDL interface to audio/video/input - Tupone Alfredo
* Correctly read PNG textures with multiple IDAT chunks - Daniel Remenak
* /clientquery (was CLIENTQUERY) moved to server - Daniel Remenak
* "Leave Game" menu item to leave a game without quitting - Daniel Remenak
* Allow user to force input device to that of their choosing - Daniel Remenak
* Tanks can drive over bumps - Dave Brosius
* Remove Building scene nodes that are laying on the ground (or lower) - Dave Brosius
* Bots drive around corners faster - Frank Thilo
* Rip out the ref counted texture system, as TM controls this now - Dave Brosius
* Bots aim better, try to evade shots - Frank Thilo

BZFlag 1.10.4 "not a smurf"
---------------------------

* Allow user to define quickMessages via the menu system - Frank Thilo
* Defaults vars are written to config but commented out - Dave Brosius
* Added -show and -hide options to bzadmin for messages - Lars Luthman
* Added support for more message types to bzadmin - lan56 @ SF, Lars Luthman
* Added menu with BZDB editor and playerlist to bzadmin curses UI - Lars Luthman
* can freeze tod in client, if allowed, via -time hh:mm:ss - Tupone Alfredo
* Allow variable number of team flags per team with +f bzfs option - Dave Brosius
* Added private and team chat sounds - Sean Morrison
* Specify a world file on the Start Server menu gui - Sean Morrison
* Server sends warning to privmsg sender to an invalid target - Lars Luthman
* bots now fully handle collision check - Tupone Alfredo
* -filterCallsigns filters email too now - Lars Luthman
* allow multiple team flags per team thru -c 5 - Dave Brosius