@@ -155,6 +155,7 @@ namespace Flags {
     *Ricochet, *SuperBullet, *InvisibleBullet, *Stealth, *Tiny, *Narrow,
     *Shield, *Steamroller, *ShockWave, *PhantomZone, *Genocide, *Jumping,
     *Identify, *Cloaking, *Useless, *Masquerade, *Seer, *Thief, *Burrow,
+    *Wings,
     *Colorblindness, *Obesity, *LeftTurnOnly, *RightTurnOnly, *Momentum, 
     *Blindness, *Jamming, *WideAngle, *NoJumping, *TriggerHappy,
     *ReverseOnly, *ForwardOnly;
